--- a/web_src/src/index.html
+++ b/web_src/src/index.html
@@ -3,12 +3,12 @@
 
    <head>
       <meta charset="UTF-8">
-      <title>React App</title>
+      <title>SpringBoot ReactJS Start</title>
    </head>
 
    <body>
       <div id="root"></div>
-      <script src="/bundle.js"></script>
+      <script src="../js/bundle.min.js"></script>
    </body>
 
 </html>
