--- a/web_src/src/index.html
+++ b/web_src/src/index.html
@@ -3,13 +3,13 @@
 
     <head>
         <meta charset="UTF-8">
-        <link href="../vendors/mui-0.9.16/css/mui.min.css" rel="stylesheet" type="text/css" />
-        <link href="../vendors/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-        <link href="../vendors/mdl/material.min.css" rel="stylesheet" type="text/css" />
+        <link href="/assets/mui-0.9.16/css/mui.min.css" rel="stylesheet" type="text/css" />
+        <link href="/assets/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+        <link href="/assets/mdl/material.min.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <script src="../vendors/mui-0.9.16/js/mui.min.js"></script>
-        <script src="../vendors/jquery-3.2.1/jquery-3.2.1.min.js"></script>
-        <script src="../vendors/mdl/material.min.js"></script>
+        <script src="/assets/mui-0.9.16/js/mui.min.js"></script>
+        <script src="/assets/jquery-3.2.1/jquery-3.2.1.min.js"></script>
+        <script src="/assets/mdl/material.min.js"></script>
         <title>SpringBoot ReactJS Start</title>
     </head>
 
