--- a/web_src/src/index.html
+++ b/web_src/src/index.html
@@ -10,7 +10,7 @@
         <script src="/assets/mui-0.9.16/js/mui.min.js"></script>
         <script src="/assets/jquery-3.2.1/jquery-3.2.1.min.js"></script>
         <script src="/assets/mdl/material.min.js"></script>
-        <title>SpringBoot ReactJS Start</title>
+        <title>ThingStar</title>
     </head>
 
     <body>
