--- a/web_src/public/index.html
+++ b/web_src/public/index.html
@@ -10,11 +10,11 @@
         <script src="/assets/mui-0.9.16/js/mui.min.js"></script>
         <script src="/assets/jquery-3.2.1/jquery-3.2.1.min.js"></script>
         <script src="/assets/mdl/material.min.js"></script>
-        <title>SpringBoot ReactJS Start</title>
+        <title>ThingStar</title>
     </head>
 
     <body>
         <div id="root"></div>
-    <script type="text/javascript" src="/js/vendor.e1e4954196173cb487ee.js"></script><script type="text/javascript" src="/js/app.fda5ad72fbae0f1476a0.js"></script></body>
+    <script type="text/javascript" src="/js/vendor.d035c73ff3df8ff75e8a.js"></script><script type="text/javascript" src="/js/app.97f4cc4e162bac009a5f.js"></script></body>
 
 </html>
